--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
     function setup() {
       createCanvas(windowWidth, windowHeight);
+      frameRate(60); // 👈 Estabiliza el dibujo
       textFont('Arial');
       textSize(32);
       textAlign(CENTER, CENTER);
-      for (let i = 0; i < 50; i++) {
+      for (let i = 0; i < 25; i++) { // 👈 Menos frases
         texts.push(new FallingText());
       }
     }
@@ -52,7 +53,7 @@
 
     function mousePressed() {
       explosionSound.play();
-      for (let i = 0; i < 100; i++) {
+      for (let i = 0; i < 40; i++) { // 👈 Menos partículas
         particles.push(new Particle(mouseX, mouseY));
       }
 
@@ -72,7 +73,7 @@
       reset() {
         this.x = random(width);
         this.y = random(-200, -50);
-        this.speed = random(1, 4);
+        this.speed = random(3, 7); // 👈 Más velocidad
         this.color = random(colors);
       }
 
