Update2 index.html
up

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       overflow: hidden;
       background-color: black;
     }
+    canvas {
+      display: block;
+      margin: auto;
+    }
   </style>
 </head>
 <body>
@@ -25,12 +29,12 @@
     }
 
     function setup() {
-      createCanvas(windowWidth, windowHeight);
-      frameRate(60); // 👈 Estabiliza el dibujo
+      createCanvas(windowWidth * 0.9, windowHeight * 0.9); // 👈 resolución reducida
+      frameRate(60);
       textFont('Arial');
       textSize(32);
       textAlign(CENTER, CENTER);
-      for (let i = 0; i < 25; i++) { // 👈 Menos frases
+      for (let i = 0; i < 15; i++) { // 👈 menos frases
         texts.push(new FallingText());
       }
     }
@@ -53,7 +57,7 @@
 
     function mousePressed() {
       explosionSound.play();
-      for (let i = 0; i < 40; i++) { // 👈 Menos partículas
+      for (let i = 0; i < 20; i++) { // 👈 menos partículas
         particles.push(new Particle(mouseX, mouseY));
       }
 
@@ -73,7 +77,7 @@
       reset() {
         this.x = random(width);
         this.y = random(-200, -50);
-        this.speed = random(3, 7); // 👈 Más velocidad
+        this.speed = random(3, 6); // 👈 velocidad intermedia
         this.color = random(colors);
       }
 
@@ -95,10 +99,10 @@
         this.x = x;
         this.y = y;
         let angle = random(TWO_PI);
-        let speed = random(2, 7);
+        let speed = random(2, 6);
         this.vx = cos(angle) * speed;
         this.vy = sin(angle) * speed;
-        this.life = 60;
+        this.life = 50;
         this.color = random(colors);
       }
 
