--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
 
     function setup() {
       isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-
       createCanvas(windowWidth, windowHeight);
       frameRate(60);
       textFont('Arial');
-      textSize(32); // 🔙 tamaño original
-
+      textSize(32);
       textAlign(CENTER, CENTER);
 
-      let totalTexts = isMobile ? 20 : 35;
+      // Aumentamos la cantidad de frases
+      let totalTexts = isMobile ? 30 : 50;
       for (let i = 0; i < totalTexts; i++) {
         texts.push(new FallingText(i, totalTexts));
       }
@@ -46,8 +45,17 @@
 
     function draw() {
       background(0);
+      let currentTime = millis();
+
       for (let t of texts) {
-        t.update();
+        if (t.waiting) {
+          if (currentTime - t.timer >= t.delay) {
+            t.reset();
+            t.waiting = false;
+          }
+        } else {
+          t.update();
+        }
         t.show();
       }
 
@@ -70,34 +78,45 @@
       for (let t of texts) {
         let d = dist(mouseX, mouseY, t.x, t.y);
         if (d < 100) {
-          t.reset();
+          t.startDelay();  // Inicia el retardo antes de reaparecer
         }
       }
     }
 
     class FallingText {
       constructor(i, total) {
-        this.reset(i, total);
+        this.index = i;
+        this.total = total;
+        this.reset(true);  // true para inicializar con separación vertical
+        this.waiting = false;
       }
 
-      reset(i = 0, total = 30) {
+      reset(firstTime = false) {
         this.x = random(width);
-        // Espaciado más uniforme en Y usando índice
-        this.y = map(i, 0, total, -height, -50);
-        this.speed = random(isMobile ? 4 : 2, isMobile ? 8 : 5);
+        this.y = firstTime
+          ? map(this.index, 0, this.total, -height * 2, -50)
+          : random(-200, -50);
+        this.speed = random(isMobile ? 4 : 2, isMobile ? 7 : 5);
         this.color = random(colors);
+      }
+
+      startDelay() {
+        this.waiting = true;
+        this.timer = millis();
+        this.delay = random(300, 900); // entre 0.3s y 0.9s
       }
 
       update() {
         this.y += this.speed;
         if (this.y > height + 50) {
-          this.reset();
+          this.startDelay();
         }
       }
 
       show() {
         fill(this.color);
-        text("Feliz cumple Yareni :D", this.x, this.y);
+        text("Feliz cumple", this.x, this.y);
+        text("Yareni :D", this.x, this.y + 35); // segunda línea un poco más abajo
       }
     }
 
