--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@ let dedicatoria = [
 let textoActual = "";
 let indexFrase = 0;
 let indexLetra = 0;
-let tiempoInicioDedicatoria;
-let tiempoInicioBorrado;
-let tiempoInicioFinal;
+let tiempoInicioFrase = 0;
+let tiempoDespuesDedicatoria = 0;
 
 let mensajeFinal = "Ya no hay más sorpresas niña jajaja ... Que tengas un excelente cumple ... Mis mejores deseos :)";
 let mensajeFinalActual = "";
 let indexMensajeFinal = 0;
+let tiempoInicioMensajeFinal = 0;
+
 let opacidadPantalla = 0;
 
 function setup() {
@@ -40,15 +41,15 @@ function setup() {
 
 function draw() {
   background(0);
-  
+
   // Partículas de fondo
   for (let p of particulas) {
     p.update();
     p.display();
   }
 
+  // Lluvia de frases antes de la dedicatoria
   if (!modoDedicatoria) {
-    // Lluvia de frases
     for (let l of lluvia) {
       l.update();
       l.display();
@@ -62,28 +63,26 @@ function draw() {
   }
   explosiones = explosiones.filter(e => !e.terminado());
 
-  // Texto dedicatoria
+  // Mostrar dedicatoria con efecto máquina de escribir
   if (modoDedicatoria && !modoBorrado && !modoMensajeFinal) {
     fill(255);
     textSize(28);
     text(textoActual, width / 2, height / 2);
-    
-    if (millis() - tiempoInicioDedicatoria > 100 && indexFrase < dedicatoria.length) {
+
+    if (millis() - tiempoInicioFrase > 50 && indexFrase < dedicatoria.length) {
       if (indexLetra < dedicatoria[indexFrase].length) {
         textoActual += dedicatoria[indexFrase][indexLetra];
         indexLetra++;
-        tiempoInicioDedicatoria = millis();
+        tiempoInicioFrase = millis();
       } else {
-        if (textoActual !== dedicatoria[indexFrase]) {
-          textoActual = dedicatoria[indexFrase];
-        }
-        if (millis() - tiempoInicioDedicatoria > 1500) {
+        if (millis() - tiempoInicioFrase > 1500) {
           indexFrase++;
           indexLetra = 0;
           if (indexFrase < dedicatoria.length) {
-            textoActual += " "; // ← ← ← cambio aquí (en vez de "\n")
+            textoActual += " "; // ← espacio entre frases
+            tiempoInicioFrase = millis();
           } else {
-            tiempoInicioBorrado = millis();
+            tiempoDespuesDedicatoria = millis();
             modoBorrado = true;
           }
         }
@@ -91,25 +90,25 @@ function draw() {
     }
   }
 
-  // Borrado lento
+  // Borrado letra por letra desde el inicio
   if (modoBorrado && !modoMensajeFinal) {
     fill(255);
     textSize(28);
     text(textoActual, width / 2, height / 2);
 
-    if (millis() - tiempoInicioBorrado > 15000) {
-      if (textoActual.length > 0 && frameCount % 3 === 0) {
+    if (millis() - tiempoDespuesDedicatoria > 15000) {
+      if (frameCount % 3 === 0 && textoActual.length > 0) {
         textoActual = textoActual.substring(1);
       } else if (textoActual.length === 0) {
         modoExplosiones = true;
-        tiempoInicioFinal = millis();
+        tiempoInicioMensajeFinal = millis();
       }
     }
   }
 
-  // Explosiones y aumento de partículas
+  // Explosiones aleatorias y aumento de partículas
   if (modoExplosiones) {
-    if (frameCount % 10 === 0 && random() < 0.3) {
+    if (frameCount % 10 === 0 && random() < 0.4) {
       explosiones.push(new Explosion(random(width), random(height)));
     }
 
@@ -117,18 +116,18 @@ function draw() {
       particulas.push(new Particula());
     }
 
-    if (millis() - tiempoInicioFinal > 15000) {
+    if (millis() - tiempoInicioMensajeFinal > 15000) {
       modoExplosiones = false;
       modoMensajeFinal = true;
     }
   }
 
-  // Mensaje final
+  // Escribir mensaje final letra por letra
   if (modoMensajeFinal) {
     fill(255);
     textSize(24);
     text(mensajeFinalActual, width / 2, height / 2 + 150);
-    
+
     if (frameCount % 3 === 0 && indexMensajeFinal < mensajeFinal.length) {
       mensajeFinalActual += mensajeFinal[indexMensajeFinal];
       indexMensajeFinal++;
@@ -137,7 +136,7 @@ function draw() {
     }
   }
 
-  // Oscurecimiento
+  // Oscurecer pantalla progresivamente
   if (modoOscurecer) {
     if (opacidadPantalla < 255) {
       opacidadPantalla += 1;
@@ -151,7 +150,6 @@ function mousePressed() {
   if (!modoDedicatoria) {
     clics++;
     lluvia.push(new Letra(random(frases)));
-
     explosiones.push(new Explosion(mouseX, mouseY));
 
     if (clics >= 40) {
@@ -159,8 +157,8 @@ function mousePressed() {
       textoActual = "";
       indexFrase = 0;
       indexLetra = 0;
-      tiempoInicioDedicatoria = millis();
-      lluvia = []; // detener lluvia
+      tiempoInicioFrase = millis();
+      lluvia = [];
     }
   }
 }
@@ -171,8 +169,7 @@ class Letra {
     this.x = random(width);
     this.y = random(-100, -20);
     this.speed = random(1, 3);
-    this.alpha = 255;
-    this.color = color(180, 100, 255); // ← Color violeta restaurado
+    this.color = color(180, 100, 255); // Violeta
   }
 
   update() {
@@ -195,7 +192,7 @@ class Particula {
     this.x = random(width);
     this.y = random(height);
     this.size = random(1, 3);
-    this.speed = random(0.2, 0.7);
+    this.speed = random(0.3, 0.8);
   }
 
   update() {
@@ -233,7 +230,7 @@ class Explosion {
     for (let p of this.particles) {
       p.x += p.vx;
       p.y += p.vy;
-      p.alpha -= 4;
+      p.alpha -= 5;
     }
   }
 
