--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@ let dedicatoria = [
 let textoActual = "";
 let indexFrase = 0;
 let indexLetra = 0;
-let tiempoInicioFrase = 0;
-let tiempoDespuesDedicatoria = 0;
+let tiempoInicioDedicatoria;
+let tiempoInicioBorrado;
+let tiempoInicioFinal;
 
 let mensajeFinal = "Ya no hay más sorpresas niña jajaja ... Que tengas un excelente cumple ... Mis mejores deseos :)";
 let mensajeFinalActual = "";
 let indexMensajeFinal = 0;
-let tiempoInicioMensajeFinal = 0;
 
 let opacidadPantalla = 0;
 
@@ -42,13 +42,13 @@ function setup() {
 function draw() {
   background(0);
 
-  // Partículas de fondo
+  // Fondo de partículas
   for (let p of particulas) {
     p.update();
     p.display();
   }
 
-  // Lluvia de frases antes de la dedicatoria
+  // Lluvia de frases (antes de la dedicatoria)
   if (!modoDedicatoria) {
     for (let l of lluvia) {
       l.update();
@@ -63,50 +63,49 @@ function draw() {
   }
   explosiones = explosiones.filter(e => !e.terminado());
 
-  // Mostrar dedicatoria con efecto máquina de escribir
+  // Dedicatoria letra por letra
   if (modoDedicatoria && !modoBorrado && !modoMensajeFinal) {
     fill(255);
     textSize(28);
     text(textoActual, width / 2, height / 2);
 
-    if (millis() - tiempoInicioFrase > 50 && indexFrase < dedicatoria.length) {
+    if (millis() - tiempoInicioDedicatoria > 50) {
       if (indexLetra < dedicatoria[indexFrase].length) {
         textoActual += dedicatoria[indexFrase][indexLetra];
         indexLetra++;
-        tiempoInicioFrase = millis();
+        tiempoInicioDedicatoria = millis();
       } else {
-        if (millis() - tiempoInicioFrase > 1500) {
+        if (millis() - tiempoInicioDedicatoria > 1500) {
           indexFrase++;
           indexLetra = 0;
           if (indexFrase < dedicatoria.length) {
-            textoActual += " "; // ← espacio entre frases
-            tiempoInicioFrase = millis();
+            textoActual += " ";
+            tiempoInicioDedicatoria = millis();
           } else {
-            tiempoDespuesDedicatoria = millis();
             modoBorrado = true;
+            tiempoInicioBorrado = millis();
           }
         }
       }
     }
   }
 
-  // Borrado letra por letra desde el inicio
+  // Borrado de texto tras 15 segundos
   if (modoBorrado && !modoMensajeFinal) {
     fill(255);
     textSize(28);
     text(textoActual, width / 2, height / 2);
-
-    if (millis() - tiempoDespuesDedicatoria > 15000) {
-      if (frameCount % 3 === 0 && textoActual.length > 0) {
+    if (millis() - tiempoInicioBorrado > 15000) {
+      if (textoActual.length > 0 && frameCount % 3 === 0) {
         textoActual = textoActual.substring(1);
       } else if (textoActual.length === 0) {
         modoExplosiones = true;
-        tiempoInicioMensajeFinal = millis();
+        tiempoInicioFinal = millis();
       }
     }
   }
 
-  // Explosiones aleatorias y aumento de partículas
+  // Explosiones y aumento de partículas
   if (modoExplosiones) {
     if (frameCount % 10 === 0 && random() < 0.4) {
       explosiones.push(new Explosion(random(width), random(height)));
@@ -116,13 +115,13 @@ function draw() {
       particulas.push(new Particula());
     }
 
-    if (millis() - tiempoInicioMensajeFinal > 15000) {
+    if (millis() - tiempoInicioFinal > 15000) {
       modoExplosiones = false;
       modoMensajeFinal = true;
     }
   }
 
-  // Escribir mensaje final letra por letra
+  // Mensaje final letra por letra
   if (modoMensajeFinal) {
     fill(255);
     textSize(24);
@@ -136,7 +135,7 @@ function draw() {
     }
   }
 
-  // Oscurecer pantalla progresivamente
+  // Oscurecimiento final
   if (modoOscurecer) {
     if (opacidadPantalla < 255) {
       opacidadPantalla += 1;
@@ -157,7 +156,7 @@ function mousePressed() {
       textoActual = "";
       indexFrase = 0;
       indexLetra = 0;
-      tiempoInicioFrase = millis();
+      tiempoInicioDedicatoria = millis();
       lluvia = [];
     }
   }
@@ -192,7 +191,7 @@ class Particula {
     this.x = random(width);
     this.y = random(height);
     this.size = random(1, 3);
-    this.speed = random(0.3, 0.8);
+    this.speed = random(0.2, 0.7);
   }
 
   update() {
